<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/opt_menu_file_save_quick"
        android:icon="@drawable/ic_content_save"
        android:title="@string/opt_menu_save_quick"
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/opt_menu_mode"
        android:icon="@drawable/ic_content_view"
        android:title="@string/opt_menu_mode"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/opt_menu_mode_view"
                android:icon="@drawable/ic_content_view"
                android:onClick="onModeSelect"
                android:title="@string/opt_menu_mode_view"/>
            <item
                android:id="@+id/opt_menu_mode_play"
                android:icon="@drawable/ic_volume_on"
                android:onClick="onModeSelect"
                android:title="@string/opt_menu_mode_play"/>
            <item
                android:id="@+id/opt_menu_mode_edit"
                android:icon="@drawable/ic_content_edit"
                android:onClick="onModeSelect"
                android:title="@string/opt_menu_mode_edit"/>
        </menu>
    </item>
    <item
        android:id="@+id/opt_menu_zoom_full_screen"
        android:icon="@drawable/ic_zoom_full_screen"
        android:onClick="onOptionsItemZoomFullScreen"
        android:title="@string/opt_menu_zoom_full"
        android:showAsAction="always">
    </item>
    <item
        android:id="@+id/opt_menu_file"
        android:icon="@drawable/ic_collection"
        android:title="@string/opt_menu_file"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/opt_menu_file_load"
                android:icon="@drawable/ic_content_read"
                android:title="@string/opt_menu_load_song">
            </item>
            <item
                android:id="@+id/opt_menu_file_save"
                android:icon="@drawable/ic_content_save"
                android:title="@string/opt_menu_save_song">
            </item>
            <item
                android:id="@+id/opt_menu_file_new"
                android:icon="@drawable/ic_content_new"
                android:title="@string/opt_menu_new_song">
            </item>
            <item
                android:id="@+id/opt_menu_file_export_image"
                android:icon="@drawable/ic_png_file"
                android:title="@string/opt_menu_export_image">
            </item>
            <item
                android:id="@+id/opt_menu_file_export_pdf"
                android:icon="@drawable/ic_pdf_file"
                android:title="@string/opt_menu_export_pdf">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/opt_menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/opt_menu_settings"
        android:showAsAction="always">
        <menu>
            <item
                android:id="@+id/opt_menu_settings_app"
                android:title="@string/opt_menu_settings_app"/>
            <item
                android:id="@+id/opt_menu_settings_song"
                android:title="@string/opt_menu_settings_song"/>
        </menu>
    </item>
    <item
        android:id="@+id/opt_menu_social"
        android:icon="@drawable/ic_menu_group"
        android:title="@string/opt_menu_social"
        android:showAsAction="always"/>

    <item
        android:id="@+id/opt_menu_billing"
        android:icon="@drawable/ic_device_access_accounts"
        android:title="@string/opt_menu_purchase"
        android:showAsAction="never"></item>

    <item
        android:id="@+id/opt_menu_help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/opt_menu_help" 
        android:showAsAction="never">
    </item>

     <item
        android:id="@+id/opt_menu_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/opt_menu_about" 
        android:showAsAction="never">
    </item>
    
</menu>