<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center_vertical"
                android:text="@string/label_note_length"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/imageButtonShorter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_marginLeft="20dp"
                android:src="@drawable/btn_navi_left" />

            <ImageView
                android:id="@+id/imageViewNoteLength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_note_4th" />

            <ImageButton
                android:id="@+id/imageButtonLonger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_gravity="left"
                android:src="@drawable/btn_navi_right" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxDotted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/rd_btn_note_dotted" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxTie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/cb_note_tie_start" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:paddingTop="5dp" >
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxBeamBegin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_note_beam_start" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/checkBoxBeamContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_note_beam_continue" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:showDividers="end" >

            <CheckBox
                android:id="@+id/checkBoxBeamEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cb_note_beam_stop" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/label_spinner_note_accidental"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/spinnerAccidentals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_span="2" />
        </TableRow>

        <View
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="0dp"
            android:background="?android:attr/dividerHorizontal" />

        <include layout="@layout/lay_dlg_two_button"/>

    </TableLayout>

</ScrollView>